TSP-182 - Fix product name align

--- a/Resources/app/storefront/src/scss/page/product-detail/_product-detail.scss
+++ b/Resources/app/storefront/src/scss/page/product-detail/_product-detail.scss
@@ -158,6 +158,10 @@
     }
 
     @include media-breakpoint-up(md) {
+        &-name-container {
+            justify-content: flex-start;
+        }
+
         &-main {
             padding-bottom: 100px;
         }
